--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,6 @@ permalink: pretty
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
-gems: [jekyll-paginate, jekyll-feed, jekyll-seo-tag]
+gems: [jekyll-paginate, jekyll-feed]
+gems:
+  - jekyll-seo-tag
